--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,8 +54,8 @@ h2,h3{
     color: #fff;
     overflow: auto;
     border-bottom: 2px solid #ccc;
-    position: fixed;   
-    width: 100%;
+    /* position: fixed;    */
+    /* width: 100%; */
 }
 
 #logo {
@@ -73,8 +73,8 @@ h2,h3{
 }
 
 nav {
-    float: right;
-    margin-top: 25px;
+    /* float: right; */
+    /* margin-top: 25px; */
 }
 
 nav a {
